--- a/templates/subnets.yaml
+++ b/templates/subnets.yaml
@@ -180,3 +180,30 @@ Resources:
       Tags:
         - Key: Name
           Value: !Sub "${AWS::StackName}-private-6-${Environment}"
+
+Outputs:
+  PublicSubnetIds:
+    Description: Comma-separated list of public subnet IDs
+    Value: !Join 
+      - ","
+      - - !Ref PublicSubnet1
+        - !Ref PublicSubnet2
+        - !Ref PublicSubnet3
+        - !Ref PublicSubnet4
+        - !Ref PublicSubnet5
+        - !Ref PublicSubnet6
+    Export:
+      Name: "PublicSubnetIds"
+
+  PrivateSubnetIds:
+    Description: Comma-separated list of private subnet IDs
+    Value: !Join 
+      - ","
+      - - !Ref PrivateSubnet1
+        - !Ref PrivateSubnet2
+        - !Ref PrivateSubnet3
+        - !Ref PrivateSubnet4
+        - !Ref PrivateSubnet5
+        - !Ref PrivateSubnet6
+    Export:
+      Name: "PrivateSubnetIds"
