updated route table

--- a/templates/route-tables.yaml
+++ b/templates/route-tables.yaml
@@ -17,7 +17,7 @@ Resources:
 
   PublicRoute:
     Type: AWS::EC2::Route
-    DependsOn: !Ref AttachGateway
+    DependsOn: AttachGateway
     Properties:
       RouteTableId: !Ref PublicRouteTable
       DestinationCidrBlock: 0.0.0.0/0
