updated route issue

--- a/templates/route-tables.yaml
+++ b/templates/route-tables.yaml
@@ -17,7 +17,8 @@ Resources:
 
   PublicRoute:
     Type: AWS::EC2::Route
-    DependsOn: AttachGateway
+    # DependsOn: AttachGateway
+    DependsOn: !ImportValue "AttachGatewayId"
     Properties:
       RouteTableId: !Ref PublicRouteTable
       DestinationCidrBlock: 0.0.0.0/0
