--- a/templates/route-tables.yaml
+++ b/templates/route-tables.yaml
@@ -17,8 +17,7 @@ Resources:
 
   PublicRoute:
     Type: AWS::EC2::Route
-    # DependsOn: AttachGateway
-    DependsOn: !ImportValue "AttachGatewayId"
+    DependsOn: AttachGatewayId
     Properties:
       RouteTableId: !Ref PublicRouteTable
       DestinationCidrBlock: 0.0.0.0/0
