--- a/templates/network.yaml
+++ b/templates/network.yaml
@@ -141,161 +141,161 @@ Resources:
   #       - Key: Name
   #         Value: !Sub "${AWS::StackName}-public-6-${Environment}"
 
-  PrivateSubnet1:
-    Type: AWS::EC2::Subnet
-    Properties:
-      VpcId: !Ref VPC
-      CidrBlock: !Ref PrivateSubnet1Cidr
-      AvailabilityZone: !Select [0, !GetAZs ""]
-      Tags:
-        - Key: Name
-          Value: !Sub "${AWS::StackName}-private-1-${Environment}"
+  # PrivateSubnet1:
+  #   Type: AWS::EC2::Subnet
+  #   Properties:
+  #     VpcId: !Ref VPC
+  #     CidrBlock: !Ref PrivateSubnet1Cidr
+  #     AvailabilityZone: !Select [0, !GetAZs ""]
+  #     Tags:
+  #       - Key: Name
+  #         Value: !Sub "${AWS::StackName}-private-1-${Environment}"
 
-  PrivateSubnet2:
-    Type: AWS::EC2::Subnet
-    Properties:
-      VpcId: !Ref VPC
-      CidrBlock: !Ref PrivateSubnet2Cidr
-      AvailabilityZone: !Select [1, !GetAZs ""]
-      Tags:
-        - Key: Name
-          Value: !Sub "${AWS::StackName}-private-2-${Environment}"
+  # PrivateSubnet2:
+  #   Type: AWS::EC2::Subnet
+  #   Properties:
+  #     VpcId: !Ref VPC
+  #     CidrBlock: !Ref PrivateSubnet2Cidr
+  #     AvailabilityZone: !Select [1, !GetAZs ""]
+  #     Tags:
+  #       - Key: Name
+  #         Value: !Sub "${AWS::StackName}-private-2-${Environment}"
 
-  PrivateSubnet3:
-    Type: AWS::EC2::Subnet
-    Properties:
-      VpcId: !Ref VPC
-      CidrBlock: !Ref PrivateSubnet3Cidr
-      AvailabilityZone: !Select [2, !GetAZs ""]
-      Tags:
-        - Key: Name
-          Value: !Sub "${AWS::StackName}-private-3-${Environment}"
+  # PrivateSubnet3:
+  #   Type: AWS::EC2::Subnet
+  #   Properties:
+  #     VpcId: !Ref VPC
+  #     CidrBlock: !Ref PrivateSubnet3Cidr
+  #     AvailabilityZone: !Select [2, !GetAZs ""]
+  #     Tags:
+  #       - Key: Name
+  #         Value: !Sub "${AWS::StackName}-private-3-${Environment}"
 
-  PrivateSubnet4:
-    Type: AWS::EC2::Subnet
-    Properties:
-      VpcId: !Ref VPC
-      CidrBlock: !Ref PrivateSubnet4Cidr
-      AvailabilityZone: !Select [3, !GetAZs ""]
-      Tags:
-        - Key: Name
-          Value: !Sub "${AWS::StackName}-private-4-${Environment}"
+  # PrivateSubnet4:
+  #   Type: AWS::EC2::Subnet
+  #   Properties:
+  #     VpcId: !Ref VPC
+  #     CidrBlock: !Ref PrivateSubnet4Cidr
+  #     AvailabilityZone: !Select [3, !GetAZs ""]
+  #     Tags:
+  #       - Key: Name
+  #         Value: !Sub "${AWS::StackName}-private-4-${Environment}"
 
-  PrivateSubnet5:
-    Type: AWS::EC2::Subnet
-    Properties:
-      VpcId: !Ref VPC
-      CidrBlock: !Ref PrivateSubnet5Cidr
-      AvailabilityZone: !Select [4, !GetAZs ""]
-      Tags:
-        - Key: Name
-          Value: !Sub "${AWS::StackName}-private-5-${Environment}"
+  # PrivateSubnet5:
+  #   Type: AWS::EC2::Subnet
+  #   Properties:
+  #     VpcId: !Ref VPC
+  #     CidrBlock: !Ref PrivateSubnet5Cidr
+  #     AvailabilityZone: !Select [4, !GetAZs ""]
+  #     Tags:
+  #       - Key: Name
+  #         Value: !Sub "${AWS::StackName}-private-5-${Environment}"
 
-  PrivateSubnet6:
-    Type: AWS::EC2::Subnet
-    Properties:
-      VpcId: !Ref VPC
-      CidrBlock: !Ref PrivateSubnet6Cidr
-      AvailabilityZone: !Select [5, !GetAZs ""]
-      Tags:
-        - Key: Name
-          Value: !Sub "${AWS::StackName}-private-6-${Environment}"
+  # PrivateSubnet6:
+  #   Type: AWS::EC2::Subnet
+  #   Properties:
+  #     VpcId: !Ref VPC
+  #     CidrBlock: !Ref PrivateSubnet6Cidr
+  #     AvailabilityZone: !Select [5, !GetAZs ""]
+  #     Tags:
+  #       - Key: Name
+  #         Value: !Sub "${AWS::StackName}-private-6-${Environment}"
 
-  PublicRouteTable:
-    Type: AWS::EC2::RouteTable
-    Properties:
-      VpcId: !Ref VPC
-      Tags:
-        - Key: Name
-          Value: !Sub "${AWS::StackName}-public-rt-${Environment}"
+  # PublicRouteTable:
+  #   Type: AWS::EC2::RouteTable
+  #   Properties:
+  #     VpcId: !Ref VPC
+  #     Tags:
+  #       - Key: Name
+  #         Value: !Sub "${AWS::StackName}-public-rt-${Environment}"
 
-  PublicRoute:
-    Type: AWS::EC2::Route
-    DependsOn: AttachGateway
-    Properties:
-      RouteTableId: !Ref PublicRouteTable
-      DestinationCidrBlock: 0.0.0.0/0
-      GatewayId: !Ref InternetGateway
+  # PublicRoute:
+  #   Type: AWS::EC2::Route
+  #   DependsOn: AttachGateway
+  #   Properties:
+  #     RouteTableId: !Ref PublicRouteTable
+  #     DestinationCidrBlock: 0.0.0.0/0
+  #     GatewayId: !Ref InternetGateway
 
-  PublicSubnet1RouteTableAssociation:
-    Type: AWS::EC2::SubnetRouteTableAssociation
-    Properties:
-      SubnetId: !Ref PublicSubnet1
-      RouteTableId: !Ref PublicRouteTable
+  # PublicSubnet1RouteTableAssociation:
+  #   Type: AWS::EC2::SubnetRouteTableAssociation
+  #   Properties:
+  #     SubnetId: !Ref PublicSubnet1
+  #     RouteTableId: !Ref PublicRouteTable
 
-  PublicSubnet2RouteTableAssociation:
-    Type: AWS::EC2::SubnetRouteTableAssociation
-    Properties:
-      SubnetId: !Ref PublicSubnet2
-      RouteTableId: !Ref PublicRouteTable
+  # PublicSubnet2RouteTableAssociation:
+  #   Type: AWS::EC2::SubnetRouteTableAssociation
+  #   Properties:
+  #     SubnetId: !Ref PublicSubnet2
+  #     RouteTableId: !Ref PublicRouteTable
 
-  PublicSubnet3RouteTableAssociation:
-    Type: AWS::EC2::SubnetRouteTableAssociation
-    Properties:
-      SubnetId: !Ref PublicSubnet3
-      RouteTableId: !Ref PublicRouteTable
+  # PublicSubnet3RouteTableAssociation:
+  #   Type: AWS::EC2::SubnetRouteTableAssociation
+  #   Properties:
+  #     SubnetId: !Ref PublicSubnet3
+  #     RouteTableId: !Ref PublicRouteTable
 
-  PublicSubnet4RouteTableAssociation:
-    Type: AWS::EC2::SubnetRouteTableAssociation
-    Properties:
-      SubnetId: !Ref PublicSubnet4
-      RouteTableId: !Ref PublicRouteTable
+  # PublicSubnet4RouteTableAssociation:
+  #   Type: AWS::EC2::SubnetRouteTableAssociation
+  #   Properties:
+  #     SubnetId: !Ref PublicSubnet4
+  #     RouteTableId: !Ref PublicRouteTable
 
-  PublicSubnet5RouteTableAssociation:
-    Type: AWS::EC2::SubnetRouteTableAssociation
-    Properties:
-      SubnetId: !Ref PublicSubnet5
-      RouteTableId: !Ref PublicRouteTable
+  # PublicSubnet5RouteTableAssociation:
+  #   Type: AWS::EC2::SubnetRouteTableAssociation
+  #   Properties:
+  #     SubnetId: !Ref PublicSubnet5
+  #     RouteTableId: !Ref PublicRouteTable
 
-  PublicSubnet6RouteTableAssociation:
-    Type: AWS::EC2::SubnetRouteTableAssociation
-    Properties:
-      SubnetId: !Ref PublicSubnet6
-      RouteTableId: !Ref PublicRouteTable
+  # PublicSubnet6RouteTableAssociation:
+  #   Type: AWS::EC2::SubnetRouteTableAssociation
+  #   Properties:
+  #     SubnetId: !Ref PublicSubnet6
+  #     RouteTableId: !Ref PublicRouteTable
 
-  PrivateRouteTable:
-    Type: AWS::EC2::RouteTable
-    Properties:
-      VpcId: !Ref VPC
-      Tags:
-        - Key: Name
-          Value: !Sub "${AWS::StackName}-private-rt-${Environment}"
+  # PrivateRouteTable:
+  #   Type: AWS::EC2::RouteTable
+  #   Properties:
+  #     VpcId: !Ref VPC
+  #     Tags:
+  #       - Key: Name
+  #         Value: !Sub "${AWS::StackName}-private-rt-${Environment}"
 
-  PrivateSubnet1RouteTableAssociation:
-    Type: AWS::EC2::SubnetRouteTableAssociation
-    Properties:
-      SubnetId: !Ref PrivateSubnet1
-      RouteTableId: !Ref PrivateRouteTable
+  # PrivateSubnet1RouteTableAssociation:
+  #   Type: AWS::EC2::SubnetRouteTableAssociation
+  #   Properties:
+  #     SubnetId: !Ref PrivateSubnet1
+  #     RouteTableId: !Ref PrivateRouteTable
 
-  PrivateSubnet2RouteTableAssociation:
-    Type: AWS::EC2::SubnetRouteTableAssociation
-    Properties:
-      SubnetId: !Ref PrivateSubnet2
-      RouteTableId: !Ref PrivateRouteTable
+  # PrivateSubnet2RouteTableAssociation:
+  #   Type: AWS::EC2::SubnetRouteTableAssociation
+  #   Properties:
+  #     SubnetId: !Ref PrivateSubnet2
+  #     RouteTableId: !Ref PrivateRouteTable
 
-  PrivateSubnet3RouteTableAssociation:
-    Type: AWS::EC2::SubnetRouteTableAssociation
-    Properties:
-      SubnetId: !Ref PrivateSubnet3
-      RouteTableId: !Ref PrivateRouteTable
+  # PrivateSubnet3RouteTableAssociation:
+  #   Type: AWS::EC2::SubnetRouteTableAssociation
+  #   Properties:
+  #     SubnetId: !Ref PrivateSubnet3
+  #     RouteTableId: !Ref PrivateRouteTable
 
-  PrivateSubnet4RouteTableAssociation:
-    Type: AWS::EC2::SubnetRouteTableAssociation
-    Properties:
-      SubnetId: !Ref PrivateSubnet4
-      RouteTableId: !Ref PrivateRouteTable
+  # PrivateSubnet4RouteTableAssociation:
+  #   Type: AWS::EC2::SubnetRouteTableAssociation
+  #   Properties:
+  #     SubnetId: !Ref PrivateSubnet4
+  #     RouteTableId: !Ref PrivateRouteTable
 
-  PrivateSubnet5RouteTableAssociation:
-    Type: AWS::EC2::SubnetRouteTableAssociation
-    Properties:
-      SubnetId: !Ref PrivateSubnet5
-      RouteTableId: !Ref PrivateRouteTable
+  # PrivateSubnet5RouteTableAssociation:
+  #   Type: AWS::EC2::SubnetRouteTableAssociation
+  #   Properties:
+  #     SubnetId: !Ref PrivateSubnet5
+  #     RouteTableId: !Ref PrivateRouteTable
 
-  PrivateSubnet6RouteTableAssociation:
-    Type: AWS::EC2::SubnetRouteTableAssociation
-    Properties:
-      SubnetId: !Ref PrivateSubnet6
-      RouteTableId: !Ref PrivateRouteTable
+  # PrivateSubnet6RouteTableAssociation:
+  #   Type: AWS::EC2::SubnetRouteTableAssociation
+  #   Properties:
+  #     SubnetId: !Ref PrivateSubnet6
+  #     RouteTableId: !Ref PrivateRouteTable
 
 Outputs:
   VpcId:
@@ -304,28 +304,32 @@ Outputs:
     Export:
       Name: !Sub "${AWS::StackName}-VpcId"
 
-  PublicSubnetIds:
-    Description: Comma-separated list of public subnet IDs
-    Value: !Join 
-      - ","
-      - - !Ref PublicSubnet1
-        - !Ref PublicSubnet2
-        - !Ref PublicSubnet3
-        - !Ref PublicSubnet4
-        - !Ref PublicSubnet5
-        - !Ref PublicSubnet6
-    Export:
-      Name: !Sub "${AWS::StackName}-PublicSubnetIds"
+  # PublicSubnetIds:
+  #   Description: Comma-separated list of public subnet IDs
+  #   Value: !Join 
+  #     - ","
+  #     - - !Ref PublicSubnet1
+  #       - !Ref PublicSubnet2
+  #       - !Ref PublicSubnet3
+  #       - !Ref PublicSubnet4
+  #       - !Ref PublicSubnet5
+  #       - !Ref PublicSubnet6
+  #   Export:
+  #     Name: !Sub "${AWS::StackName}-PublicSubnetIds"
 
-  PrivateSubnetIds:
-    Description: Comma-separated list of private subnet IDs
-    Value: !Join 
-      - ","
-      - - !Ref PrivateSubnet1
-        - !Ref PrivateSubnet2
-        - !Ref PrivateSubnet3
-        - !Ref PrivateSubnet4
-        - !Ref PrivateSubnet5
-        - !Ref PrivateSubnet6
-    Export:
-      Name: !Sub "${AWS::StackName}-PrivateSubnetIds"
+  # PrivateSubnetIds:
+  #   Description: Comma-separated list of private subnet IDs
+  #   Value: !Join 
+  #     - ","
+  #     - - !Ref PrivateSubnet1
+  #       - !Ref PrivateSubnet2
+  #       - !Ref PrivateSubnet3
+  #       - !Ref PrivateSubnet4
+  #       - !Ref PrivateSubnet5
+  #       - !Ref PrivateSubnet6
+  #   Export:
+  #     Name: !Sub "${AWS::StackName}-PrivateSubnetIds"
+  
+  PublicSubnetIds:
+    Description: "List of Public Subnet IDs"
+    Value: !GetAtt SubnetCreator.SubnetIds
