updated security config

--- a/security-group-config.yaml
+++ b/security-group-config.yaml
@@ -1,4 +1,4 @@
 template-file-path: templates/security_group.yaml
 
 parameters:
-  VpcId: !stack_output ./templates/network.yaml::VpcId
+  VpcId: test
