--- a/templates/ecs.yaml
+++ b/templates/ecs.yaml
@@ -10,6 +10,31 @@ Parameters:
     Description: Name of the ECS container
 
 Resources:
+  TaskExecutionRole:
+    Type: AWS::IAM::Role
+    Properties:
+      AssumeRolePolicyDocument:
+        Version: "2012-10-17"
+        Statement:
+          - Effect: Allow
+            Principal:
+              Service: ecs-tasks.amazonaws.com
+            Action: sts:AssumeRole
+      ManagedPolicyArns:
+        - arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy
+      Policies:
+        - PolicyName: ECRAccess
+          PolicyDocument:
+            Version: "2012-10-17"
+            Statement:
+              - Effect: Allow
+                Action:
+                  - ecr:GetAuthorizationToken
+                  - ecr:BatchCheckLayerAvailability
+                  - ecr:GetDownloadUrlForLayer
+                  - ecr:BatchGetImage
+                Resource: "*"
+
   ECSCluster:
     Type: AWS::ECS::Cluster
     Properties:
@@ -23,11 +48,11 @@ Resources:
       RequiresCompatibilities: ["FARGATE"]
       Cpu: '256'
       Memory: '512'
-      ExecutionRoleArn: !Ref TaskExecutionRoleArn
-      TaskRoleArn: !Ref TaskExecutionRoleArn
+      ExecutionRoleArn: !GetAtt TaskExecutionRole.Arn
+      TaskRoleArn: !GetAtt TaskExecutionRole.Arn
       ContainerDefinitions:
         - Name: !Sub "${ECSContainerName}-${Environment}"
-          Image: !Sub "${AWS::AccountId}.dkr.ecr.${AWS::Region}.amazonaws.com/${ECRRepositoryName}:latest"
+          Image: !ImportValue ECRRepositoryURI:latest
           PortMappings:
             - ContainerPort: 80
               Protocol: tcp
