--- a/templates/ecr.yaml
+++ b/templates/ecr.yaml
@@ -17,7 +17,7 @@ Resources:
   ECRRepository:
     Type: AWS::ECR::Repository
     Properties:
-      RepositoryName: !Sub "${ECRRepositoryName}-${!ImportValue Environment}"
+      RepositoryName: !Sub "${ECRRepositoryName}-${Environment}"
 
 Outputs:
   ECRRepositoryURI:
