--- a/templates/load-balancer.yaml
+++ b/templates/load-balancer.yaml
@@ -23,7 +23,7 @@ Resources:
         - Key: "access_logs.s3.enabled"
           Value: "true"
         - Key: "access_logs.s3.bucket"
-          Value: !Ref AccessLogsBucketName
+          Value: !ImportValue AccessLogsBucketName
         - Key: "access_logs.s3.prefix"
           Value: "alb-logs"
         - Key: "deletion_protection.enabled"
