--- a/templates/code-pipeline.yaml
+++ b/templates/code-pipeline.yaml
@@ -205,13 +205,13 @@ Resources:
         ComputeType: BUILD_GENERAL1_SMALL
         Image: "aws/codebuild/amazonlinux2-x86_64-standard:4.0"
         Type: LINUX_CONTAINER
-      ServiceRole: !ImportValue "FrontendCodeBuildServiceRole"
+      ServiceRole: !Ref FrontendCodeBuildServiceRole
 
   FrontendCodePipeline:
     Type: AWS::CodePipeline::Pipeline
     Properties:
       Name: "Frontend-Code-Pipeline"
-      RoleArn: !ImportValue "FrontendCodePipelineServiceRole"
+      RoleArn: !Ref FrontendCodePipelineServiceRole
       Stages:
         - Name: Source
           Actions:
@@ -279,7 +279,7 @@ Resources:
     Type: AWS::CodePipeline::Pipeline
     Properties:
       Name: "Backend-Code-Pipeline"
-      RoleArn: !ImportValue "BackendCodePipelineServiceRole"
+      RoleArn: !Sub BackendCodePipelineServiceRole
       ArtifactStore:
         Type: S3
         Location: !ImportValue BackendArtifactBucketName
