changed import value

--- a/templates/code-pipeline.yaml
+++ b/templates/code-pipeline.yaml
@@ -22,6 +22,8 @@ Parameters:
   CodeStarConnectionArn:
     Type: String
     Description: CodeStarConnectionArn
+  ECRRepositoryName:
+    Type: String
 
 Resources:
   BackendCodeBuildServiceRole:
