--- a/code-pipeline-config.yaml
+++ b/code-pipeline-config.yaml
@@ -9,3 +9,5 @@ parameters:
   BackendGitHubBranchName: main
   CodeStarConnectionArn: arn:aws:codeconnections:us-east-1:767397811981:connection/96833795-1cf4-40e6-9e89-56c098ee9af2
   ECRRepositoryName: "mebweb-ecr-repository"
+  ECSContainerName: mebweb-container
+  BackendArtifactBucketName: mebwebbackendartifact 
