--- a/code-pipeline-config.yaml
+++ b/code-pipeline-config.yaml
@@ -8,5 +8,5 @@ parameters:
   BackendGitHubRepositoryName: manikandan-c-kf/test-mebweb-backend
   BackendGitHubBranchName: main
   CodeStarConnectionArn: arn:aws:codeconnections:us-east-1:767397811981:connection/96833795-1cf4-40e6-9e89-56c098ee9af2
-  CloudFrontID: CLOUDFRONT_ID
+  CloudFrontID: !ImportValue CloudFrontDistributionId
   ECRRepositoryName: mebweb-ecr-repository
