--- a/templates/code-pipeline.yaml
+++ b/templates/code-pipeline.yaml
@@ -155,7 +155,7 @@ Resources:
                 Action:
                   - cloudfront:CreateInvalidation
                 Resource:
-                  - !Sub arn:aws:cloudfront::${AWS::AccountId}:distribution/${CloudFrontID}
+                  - !Sub arn:aws:cloudfront::${AWS::AccountId}:distribution/${!ImportValue CloudFrontDistributionId}
               - Effect: Allow
                 Action:
                   - ssm:GetParameter
