--- a/templates/code-pipeline.yaml
+++ b/templates/code-pipeline.yaml
@@ -155,7 +155,9 @@ Resources:
                 Action:
                   - cloudfront:CreateInvalidation
                 Resource:
-                  - !Sub arn:aws:cloudfront::${AWS::AccountId}:distribution/${!ImportValue CloudFrontDistributionId}
+                  - !Sub 
+                    - arn:aws:cloudfront::${AWS::AccountId}:distribution/${distributionId}
+                    - distributionId: !ImportValue CloudFrontDistributionId
               - Effect: Allow
                 Action:
                   - ssm:GetParameter
